# sonicli

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
inc/: server_config.hpp
inc/crypto/: md5.hpp  password.hpp
inc/oss/: endpoints.hpp  server_config.hpp
inc/oss/data/: subsonic_response.hpp
inc/ui/: album_view.hpp  debug_view.hpp  login_component.hpp
inc/util/: xdg.hpp
src/: main.cpp  server_config.cpp
src/crypto/: md5.cpp  password.cpp
src/oss/: endpoints.cpp  server_config.cpp
src/oss/data/: subsonic_response.cpp
src/ui/: album_view.cpp  debug_view.cpp  login_component.cpp
src/util/: xdg.cpp
